--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Author: Garrett Dancik
 Maintainer: The package maintainer <yourself@somewhere.net>
 Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
+Imports: ggplot2,plotly,magrittr
 License: What license is it under?
 Encoding: UTF-8
 LazyData: true
